--- a/index.html
+++ b/index.html
@@ -75,18 +75,19 @@
 
         .btn-gw {
             padding: 10px;
-            background-color: rgb(15, 90, 157);
-            font-family: 'Cairo', sans-serif;
-        }
-
-        .btn-gw:hover {
-
-
-            padding: 10px;
             background-color: rgba(15, 90, 157, 0.1);
             border: 1px solid rgba(15, 90, 157, 1);
             color: rgb(15, 90, 157);
-            font-weight: bold;
+            font-weight: 900;
+            font-size: 1.1em;
+        }
+
+        .btn-gw:hover {
+            padding: 10px;
+            background-color: rgb(15, 90, 157);
+            font-family: 'Cairo', sans-serif;
+
+
         }
 
         i {
