--- a/index.html
+++ b/index.html
@@ -240,8 +240,27 @@
         });
 
         function ig() {
-            // location.href = 'https://www.instagram.com/agung.sapp/';
             window.open('https://www.instagram.com/agung.sapp/', '_blank')
+        }
+
+        function git() {
+            window.open('https://github.com/agungsapp', '_blank')
+        }
+
+        function link() {
+            window.open('https://www.linkedin.com/in/agungsapp/', '_blank')
+        }
+
+        function yt() {
+            window.open('https://www.youtube.com/channel/UCFipyI5epwjRAjRj66gPZqw', '_blank')
+        }
+
+        function twit() {
+            window.open('https://twitter.com/aguungsap', '_blank')
+        }
+
+        function tt() {
+            window.open('https://www.tiktok.com/@agungsapppp', '_blank')
         }
     </script>
 </body>
